compiler-skeleton/tests/compile-error/comp_block.ln
//ERROR declare id main and block
c:int;
d:bool;
{	c:int:
	d:bool;
}

//ERROR  use id declare previous block
{ 	e:int;
	f:bool;
}
e=6;
f=true;

//ERROR use id declare previous block in current block
{	a:int;
	b:bool;
}
{	a=5;
	b=false;
}

